fix: add gap to header-container

--- a/image-gallery/style.css
+++ b/image-gallery/style.css
@@ -48,6 +48,7 @@ img {
 	flex-wrap: wrap;
 	justify-content: space-between;
 	align-items: center;
+	gap: 1.5rem;
 }
 
 .title-div {
